# NekoTown

./: .gitignore  Dockerfile  LICENSE.txt  NekoTown.sln  README.md  app.py  icon.svg.import  package-lock.json  project.godot  pyproject.toml
Assets/Fonts/: zpix.ttf.import
Assets/Img/: back-icon.svg.import  bg.png.import
Config/: server_info.json
Scenes/: add_config.tscn  first_screen.tscn  menu.tscn  server_config.tscn  transition.tscn
Scripts/: ServerList.cs  add_config.cs  first_screen.cs  server_config.cs  transition.cs
Theme/: server_config.theme
