[project]
name = "NekoTown"
version = "0.1.0"
description = "Backend of NekoTown"
authors = [
    {name = "Zhiyue Chen",email = "20301050198@fudan.edu.cn"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
